--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//WebContent/brand=UTF-8
 encoding//WebContent/brand/notice_detail.jsp=UTF-8
 encoding//WebContent/css/main.css=UTF-8
+encoding//src/sql/MyConnection.java=UTF-8
