--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/admin/admin_calendar.jsp=UTF-8
 encoding//WebContent/brand=UTF-8
 encoding//WebContent/brand/notice_detail.jsp=UTF-8
 encoding//WebContent/css/main.css=UTF-8
